--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
                 </ul>
             </nav>
             <ul class="contacts-header">
-                <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+                <li>
+                    <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
                 <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
             </ul> 
         </div>
@@ -48,6 +49,11 @@
         <h2 class="display">Особенности</h2>
         <ul class="list-feature">
             <li class="desc-feature">
+                <svg>
+                    <use href="./images/icons.svg#icon-antenna-1">
+
+                    </use>
+                </svg>
                 <h3 class="title">Внимание к деталям</h3>
                 <p class="desc">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
             </li>
@@ -133,6 +139,62 @@
     <section class="clients section">
         <div class="container">
             <h2 class="desc-client">Постоянные клиенты</h2>
+            <ul class="clients-list">
+                <li>
+                    <a href="" class="clients">
+                        <svg class="yako">
+                            <use href="./images/icons.svg#icon-client1">
+
+                            </use>
+                        </svg>
+                    </a>
+                </li>
+                <li>
+                    <a href="" class="clients">
+                        <svg class="company2">
+                            <use href="./images/icons.svg#icon-client2">
+
+                            </use>
+                        </svg>
+                    </a>
+                </li>
+                <li>
+                    <a href="" class="clients">
+                        <svg class="company2">
+                            <use href="./images/icons.svg#icon-client3">
+
+                            </use>
+                        </svg>
+                    </a>
+                </li>
+                <li>
+                    <a href="" class="clients">
+                        <svg class="company2">
+                            <use href="./images/icons.svg#icon-client4">
+
+                            </use>
+                        </svg>
+                    </a>
+                </li>
+                <li>
+                    <a href="" class="clients">
+                        <svg class="company2">
+                            <use href="./images/icons.svg#icon-client5">
+
+                            </use>
+                        </svg>
+                    </a>
+                </li>
+                <li>
+                    <a href="" class="clients">
+                        <svg class="company2">
+                            <use href="./images/icons.svg#icon-client6">
+
+                            </use>
+                        </svg>
+                    </a>
+                </li>
+            </ul>
         </div>
     </section>
     </main>
